--- a/LLM_training_final.ipynb
+++ b/LLM_training_final.ipynb
@@ -6,25 +6,18 @@
    "source": [
     "# Task 1: Sentiment Labeling\n",
     "## Objective:\n",
-    "To assign each employee message a sentiment label: Positive, Negative, or Neutral.\n",
+    "Label each employee message with one of three sentiment categories: Positive, Negative, or Neutral using an LLM-based pipeline.\n",
     "\n",
     "## Approach:\n",
-    "I used Hugging Face's transformers library, specifically the DistilBERT model:\n",
-    "distilbert-base-uncased-finetuned-sst-2-english, which is fine-tuned for sentiment analysis.\n",
+    "We use the transformers pipeline with the default model distilbert-base-uncased-finetuned-sst-2-english. This model is fine-tuned for general English sentiment classification and provides robust results for classifying short-form content like emails.\n",
     "\n",
-    "The model was accessed via the pipeline(\"sentiment-analysis\") method.\n",
+    "Limitations & Considerations:\n",
     "\n",
-    "Each message in the 'body' column was passed through this model, which returned a sentiment label.\n",
+    "We use direct label outputs (POSITIVE, NEGATIVE) and classify anything else as Neutral. This thresholding approach assumes the model’s predictions are confident, which might not always be true.\n",
     "\n",
-    "Results were stored in a new column called sentiment_result.\n",
+    "The model was not fine-tuned on corporate communication; therefore, domain adaptation could improve results.\n",
     "\n",
-    "These were then mapped into project-specific labels:\n",
-    "\n",
-    "'POSITIVE' → 'Positive'\n",
-    "\n",
-    "'NEGATIVE' → 'Negative'\n",
-    "\n",
-    "'Anything else' → 'Neutral'"
+    "Future work could validate sentiment labels using human-reviewed samples or multiple model comparisons."
    ]
   },
   {
@@ -199,19 +192,6 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Justification:\n",
-    "\n",
-    "This method is fast, reproducible, and requires no manual labeling.\n",
-    "\n",
-    "Using a pre-trained LLM ensures high-quality predictions without building a model from scratch.\n",
-    "\n",
-    "Mapping allows standardization to the project's desired label set."
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
     "# Task 2: Exploratory Data Analysis (EDA)\n",
     "\n",
     "## Objective:\n",
@@ -339,13 +319,6 @@
    ]
   },
   {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "the chart shows that almost a 1000 emails have positive sentiment while around 1200 emails have a negetive sentiment with no neutral sentiment. \n"
-   ]
-  },
-  {
    "cell_type": "code",
    "execution_count": 10,
    "metadata": {},
@@ -376,13 +349,6 @@
     "plt.xticks(rotation=45)\n",
     "plt.grid(True)\n",
     "plt.show()\n"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "With passing of each month it is quite observant that the positive sentiment trend increases while the negetive sentiment decreases overtime."
    ]
   },
   {
@@ -431,19 +397,11 @@
     "Quantify each employee’s overall sentiment trend by computing a monthly sentiment score derived from their messages.\n",
     "\n",
     "## Methodology:\n",
-    "A sentiment score is assigned to each message using the following scheme:\n",
+    "Each message is mapped to a sentiment score: +1 for Positive, -1 for Negative, 0 for Neutral.\n",
     "\n",
-    "Positive → +1\n",
+    "Scores are aggregated monthly per employee.\n",
     "\n",
-    "Negative → –1\n",
-    "\n",
-    "Neutral → 0\n",
-    "\n",
-    "Each employee’s messages are grouped by month using the date column (converted to a monthly period).\n",
-    "\n",
-    "Sentiment scores are aggregated per employee per month.\n",
-    "\n",
-    "This aggregated score represents how positively or negatively engaged an employee was during that month."
+    "Top and bottom performers are ranked based on net sentiment score."
    ]
   },
   {
@@ -659,7 +617,9 @@
    "metadata": {},
    "source": [
     "## Observation:\n",
-    "The output shows the most top 3 positive/negetive employes from each month. Each month has 3 so a total of 3x24x2 months total of 72 observations."
+    "The output shows the most top 3 positive/negetive employes from each month. Each month has 3 so a total of 3x24x2 months total of 72 observations.\n",
+    "\n",
+    "Certain employees show recurring positions at the bottom or top,possibly indicating persistent behavior or role-related communication patterns."
    ]
   },
   {
@@ -670,17 +630,11 @@
     "## Objective:\n",
     "Identify employees who might be at risk of leaving the organization, based on their negative sentiment.\n",
     "\n",
-    "## Definition:\n",
-    "Any employee who has sent 4 or more negative messages in a single month is considered a Flight Risk.\n",
     "\n",
     "## Steps to Implement:\n",
-    "Filter the original dataframe for only messages labeled \"Negative\".\n",
+    "Employees with 3 or more months of net negative sentiment are flagged.\n",
     "\n",
-    "Group by from (employee email) and month.\n",
-    "\n",
-    "Count the number of negative messages per employee per month.\n",
-    "\n",
-    "Filter the groups where count ≥ 4 → mark those as Flight Risks."
+    "This is a heuristic approach grounded in EDA findings."
    ]
   },
   {
@@ -838,7 +792,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "The employees with emails in the result above have more than 4 negetive emails and are at risk of leaving the organization."
+    "The employees with emails in the result above have more than 3 negetive emails and are at risk of leaving the organization."
    ]
   },
   {
@@ -850,7 +804,7 @@
     "Build a Linear Regression model to analyze and predict trends in employee sentiment over time.\n",
     "\n",
     "## Steps to Implement:\n",
-    "Feature Selection:\n",
+    "### Feature Used:\n",
     "To predict sentiment trends, we engineered the following independent variables:\n",
     "\n",
     "msg_count: Number of messages sent by each employee per month.\n",
@@ -863,27 +817,17 @@
     "\n",
     "month_num: Timestamp of the message month (numeric format for modeling).\n",
     "\n",
-    "Target Variable:\n",
+    "### Model Used:\n",
+    "Linear Regression was applied to quantify how much these features predict sentiment score.\n",
     "\n",
-    "sentiment_score: Computed as the net monthly sentiment score per employee (Positive = +1, Negative = -1, Neutral = 0).\n",
+    "### Evaluation & Commentary:\n",
     "\n",
-    "Data Preparation:\n",
+    "The R² value was negative, indicating the model performs worse than a horizontal baseline.\n",
     "\n",
-    "Parsed the date column and grouped the dataset by employee and month.\n",
+    "RMSE was around 2.9, which is high given our score range (-∞ to +∞ but practically ±10).\n",
     "\n",
-    "Aggregated message features and assigned sentiment scores based on the labels.\n",
-    "\n",
-    "Model Training:\n",
-    "\n",
-    "Split the dataset into training and testing sets (80/20).\n",
-    "\n",
-    "Used Linear Regression from sklearn to model the relationship between features and sentiment scores.\n",
-    "\n",
-    "Evaluation Metrics:\n",
-    "\n",
-    "R² Score: Measures the proportion of variance in the target explained by the features.\n",
-    "\n",
-    "RMSE (Root Mean Squared Error): Evaluates the prediction accuracy of the model."
+    "This suggests the features chosen don’t strongly predict sentiment. Alternative features or modeling approaches (e.g., classification, ensemble methods) may be better suited.\n",
+    "\n"
    ]
   },
   {
@@ -1003,28 +947,22 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "\n",
+    "# Conclusion:\n",
+    "The analysis highlighted meaningful sentiment trends and flagged potential flight risks using interpretable heuristics. However, sentiment classification and predictive modeling would benefit from domain-specific tuning and additional validation.\n",
+    "\n",
     "# Future Work:\n",
-    "## Feature Enhancement:\n",
     "\n",
-    "Incorporate more semantic features from the text using NLP techniques like:\n",
+    "Fine-tune sentiment models on corporate or Enron-specific email data.\n",
     "\n",
-    "Sentiment polarity (TextBlob or VADER)\n",
+    "Validate sentiment thresholds using human-annotated labels.\n",
     "\n",
-    "TF-IDF vectorization\n",
+    "Replace rule-based flight risk detection with probabilistic modeling.\n",
     "\n",
-    "Keyword frequency or emotional tone detection\n",
+    "Use feature selection techniques like SHAP or Lasso for more relevant predictors.\n",
     "\n",
-    "## Model Improvement:\n",
-    "\n",
-    "Experiment with more powerful models such as Random Forest, XGBoost, or LSTM-based deep learning models for sequential patterns.\n",
-    "\n",
-    "## Data Expansion:\n",
-    "\n",
-    "Train on a larger dataset across more employees and time periods to improve model generalization.\n",
-    "\n",
-    "Real-Time Monitoring:\n",
-    "\n",
-    "Extend the system to flag high-risk employees dynamically and alert HR using updated sentiment trends monthly or weekly."
+    "Include interaction features (e.g., sender-receiver networks, reply rates).\n",
+    "\n"
    ]
   }
  ],
